--- a/index.html
+++ b/index.html
@@ -1,47 +1,286 @@
-let streak = 0; // new variable for streak
-let baseScore = 0; // normal correct answers count
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiz App with Sounds and Timer Bar</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f9; padding: 20px; text-align: center; }
+    .card { background: white; padding: 20px; border-radius: 12px; max-width: 600px; margin: auto; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+    h1 { font-size: 24px; }
+    input, button { margin: 8px 0; padding: 8px; font-size: 16px; }
+    button { border: none; border-radius: 8px; background: #007BFF; color: white; cursor: pointer; transition: 0.2s; }
+    button:hover { background: #0056b3; }
+    .options { margin: 10px 0; display: flex; flex-direction: column; gap: 10px; }
+    .hidden { display: none; }
+    .option-btn { padding: 10px; font-size: 16px; border-radius: 8px; cursor: pointer; transition: 0.2s; }
+    .option-btn.correct { background-color: #28a745 !important; color: white; }
+    .option-btn.wrong { background-color: #dc3545 !important; color: white; }
+    #shareLink { width: 100%; }
+    #leaderboard { margin-top: 15px; text-align: left; }
+    .feedback { font-weight: bold; margin: 10px 0; }
+    .highlight { background-color: #fff3cd; font-weight: bold; }
+    .gold { color: gold; font-weight: bold; }
+    .silver { color: silver; font-weight: bold; }
+    .bronze { color: #cd7f32; font-weight: bold; }
+    #progress { font-weight: bold; margin-bottom: 5px; }
+    #scoreDisplay { font-weight: bold; margin-bottom: 5px; }
+    #timerContainer { width: 100%; background: #ddd; height: 10px; border-radius: 5px; margin-bottom: 10px; overflow: hidden; }
+    #timerBar { width: 100%; height: 100%; background: #dc3545; transition: width 1s linear; }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Quiz App with Sounds and Timer Bar</h1>
 
-function startQuiz() {
-  currentIndex = 0;
-  baseScore = 0;
-  score = 0;
-  streak = 0;
-  scoreDisplay.textContent = `Score: ${score} / ${questions.length}`;
-  feedbackEl.textContent = '';
-  nextBtn.classList.add('hidden');
-  showQuestion();
-}
+    <div id="editor">
+      <h2>Create a Question</h2>
+      <input type="text" id="questionText" placeholder="Enter question"><br>
+      <input type="text" class="option-input" placeholder="Option 1"><br>
+      <input type="text" class="option-input" placeholder="Option 2"><br>
+      <input type="text" class="option-input" placeholder="Option 3"><br>
+      <input type="text" class="option-input" placeholder="Option 4"><br>
+      <input type="text" id="correctAnswer" placeholder="Correct answer"><br>
+      <button id="addQuestion">Add Question</button>
+      <button id="generateLink">Generate Shareable Link</button>
+      <input type="text" id="shareLink" readonly placeholder="Your shareable link will appear here">
+    </div>
 
-function selectAnswer(selected, correct, btn, manual=true) {
-  clearInterval(timerInterval);
-  const buttons = optionsDiv.querySelectorAll('button');
-  buttons.forEach(b => b.disabled = true);
+    <div id="quiz" class="hidden">
+      <button id="startQuizBtn">Start Quiz</button>
+      <div id="questionContainer" class="hidden">
+        <p id="scoreDisplay">Score: 0 / 0</p>
+        <p id="progress"></p>
+        <div id="timerContainer"><div id="timerBar"></div></div>
+        <p id="question"></p>
+        <div id="options" class="options"></div>
+        <div class="feedback" id="feedback"></div>
+        <button id="next" class="hidden">Next</button>
+      </div>
+    </div>
 
-  if(selected === correct){
-    if(manual) {
-      baseScore++;
-      streak++;
-      score += streak; // add streak bonus to total score
+    <div id="result" class="hidden">
+      <h2>Final Score</h2>
+      <p id="finalScore"></p>
+      <h2>Leaderboard</h2>
+      <ol id="leaderboard"></ol>
+      <button id="resetLeaderboardBtn" style="margin-top: 10px; background-color:#dc3545;">Reset Leaderboard</button>
+      <br>
+      <button id="playAgainBtn">Play Again</button>
+    </div>
+  </div>
+
+  <!-- Sound effects -->
+  <audio id="correctSound" src="https://freesound.org/data/previews/320/320654_5260876-lq.mp3"></audio>
+  <audio id="wrongSound" src="https://freesound.org/data/previews/320/320655_5260876-lq.mp3"></audio>
+
+  <script>
+    let questions = [];
+    let currentIndex = 0;
+    let score = 0;
+    let latestAttemptTimestamp = null;
+    let timerInterval = null;
+    const timePerQuestion = 15; // seconds
+
+    const leaderboardEl = document.getElementById('leaderboard');
+    const addBtn = document.getElementById('addQuestion');
+    const generateLinkBtn = document.getElementById('generateLink');
+    const questionText = document.getElementById('questionText');
+    const optionInputs = document.querySelectorAll('.option-input');
+    const correctAnswerInput = document.getElementById('correctAnswer');
+    const shareLinkInput = document.getElementById('shareLink');
+
+    const editorDiv = document.getElementById('editor');
+    const quizDiv = document.getElementById('quiz');
+    const startQuizBtn = document.getElementById('startQuizBtn');
+    const questionContainer = document.getElementById('questionContainer');
+    const progressEl = document.getElementById('progress');
+    const scoreDisplay = document.getElementById('scoreDisplay');
+    const timerBar = document.getElementById('timerBar');
+    const questionEl = document.getElementById('question');
+    const optionsDiv = document.getElementById('options');
+    const nextBtn = document.getElementById('next');
+    const feedbackEl = document.getElementById('feedback');
+    const resultDiv = document.getElementById('result');
+    const finalScoreEl = document.getElementById('finalScore');
+    const playAgainBtn = document.getElementById('playAgainBtn');
+    const resetLeaderboardBtn = document.getElementById('resetLeaderboardBtn');
+
+    const correctSound = document.getElementById('correctSound');
+    const wrongSound = document.getElementById('wrongSound');
+
+    function shuffleArray(arr) {
+      for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
     }
-    feedbackEl.textContent = `✅ Correct! Streak: ${streak} (+${streak} pts)`;
-    if(btn) btn.classList.add('correct');
-    correctSound.play();
-  } else {
-    feedbackEl.textContent = selected===null 
-      ? `⏰ Time's up! Correct: ${correct}` 
-      : `❌ Wrong! Correct: ${correct}`;
-    if(btn) btn.classList.add('wrong');
-    buttons.forEach(b => { if(b.textContent === correct) b.classList.add('correct'); });
-    streak = 0; // reset streak
-    wrongSound.play();
-  }
 
-  scoreDisplay.textContent = `Score: ${score} / ${questions.length + calculateMaxStreakBonus()}`;
-  nextBtn.classList.remove('hidden');
-}
+    function saveScore(name, score) {
+      const leaderboardKey = 'quizLeaderboard';
+      const leaderboard = JSON.parse(localStorage.getItem(leaderboardKey)) || [];
+      const timestamp = Date.now();
+      latestAttemptTimestamp = timestamp;
+      leaderboard.push({name, score, total: questions.length, timestamp});
+      localStorage.setItem(leaderboardKey, JSON.stringify(leaderboard));
+    }
 
-// helper function to calculate max potential streak bonus for display
-function calculateMaxStreakBonus() {
-  let n = questions.length;
-  return (n*(n+1))/2 - n; // maximum possible bonus if all answers correct
-}
+    function showLeaderboard() {
+      leaderboardEl.innerHTML = '';
+      const leaderboard = JSON.parse(localStorage.getItem('quizLeaderboard')) || [];
+      leaderboard
+        .sort((a,b)=> b.score - a.score || a.timestamp - b.timestamp)
+        .slice(0, 10)
+        .forEach((entry, index) => {
+          const li = document.createElement('li');
+          const date = new Date(entry.timestamp);
+          const answerText = entry.score === 1 ? 'answer' : 'answers';
+          li.textContent = `${entry.name} - ${entry.score} Correct ${answerText} out of ${entry.total} (${date.toLocaleString()})`;
+          if(entry.timestamp === latestAttemptTimestamp) li.classList.add('highlight');
+          if(index === 0) li.classList.add('gold');
+          else if(index === 1) li.classList.add('silver');
+          else if(index === 2) li.classList.add('bronze');
+          leaderboardEl.appendChild(li);
+        });
+    }
+
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.has('quiz')) {
+      const encoded = urlParams.get('quiz');
+      try {
+        questions = JSON.parse(decodeURIComponent(atob(encoded)));
+        shuffleArray(questions);
+        editorDiv.classList.add('hidden');
+        quizDiv.classList.remove('hidden');
+        startQuizBtn.classList.remove('hidden');
+      } catch(e){ console.error('Invalid quiz data'); }
+    }
+
+    addBtn.addEventListener('click', () => {
+      const question = questionText.value.trim();
+      const options = Array.from(optionInputs).map(i=>i.value.trim());
+      const answer = correctAnswerInput.value.trim();
+      if(!question || options.some(opt=>!opt)||!answer){ alert('Fill all fields'); return; }
+      questions.push({question, options, answer});
+      questionText.value = '';
+      optionInputs.forEach(i=>i.value='');
+      correctAnswerInput.value='';
+      alert('Question added! Total: '+questions.length);
+    });
+
+    generateLinkBtn.addEventListener('click', () => {
+      if(questions.length===0){ alert('Add questions first'); return; }
+      const encoded = btoa(encodeURIComponent(JSON.stringify(questions)));
+      const link = window.location.origin + window.location.pathname + '?quiz=' + encoded;
+      shareLinkInput.value = link;
+      shareLinkInput.select();
+      document.execCommand('copy');
+      alert('Link copied!');
+    });
+
+    startQuizBtn.addEventListener('click', () => {
+      startQuizBtn.classList.add('hidden');
+      questionContainer.classList.remove('hidden');
+      startQuiz();
+    });
+
+    playAgainBtn.addEventListener('click', () => {
+      resultDiv.classList.add('hidden');
+      questionContainer.classList.remove('hidden');
+      feedbackEl.textContent = '';
+      startQuiz();
+    });
+
+    resetLeaderboardBtn.addEventListener('click', () => {
+      if(confirm('Are you sure you want to reset the leaderboard?')) {
+        localStorage.removeItem('quizLeaderboard');
+        showLeaderboard();
+        alert('Leaderboard has been reset.');
+      }
+    });
+
+    function startQuiz() {
+      currentIndex = 0;
+      score = 0;
+      scoreDisplay.textContent = `Score: ${score} / ${questions.length}`;
+      feedbackEl.textContent = '';
+      nextBtn.classList.add('hidden');
+      showQuestion();
+    }
+
+    function startTimer(callback) {
+      let timeLeft = timePerQuestion;
+      timerBar.style.width = '100%';
+      clearInterval(timerInterval);
+      timerInterval = setInterval(() => {
+        timeLeft--;
+        timerBar.style.width = `${(timeLeft/timePerQuestion)*100}%`;
+        if(timeLeft <= 0){
+          clearInterval(timerInterval);
+          callback();
+        }
+      }, 1000);
+    }
+
+    function showQuestion() {
+      feedbackEl.textContent = '';
+      progressEl.textContent = `Question ${currentIndex + 1} of ${questions.length}`;
+      scoreDisplay.textContent = `Score: ${score} / ${questions.length}`;
+      const q = questions[currentIndex];
+      questionEl.textContent = q.question;
+      optionsDiv.innerHTML = '';
+      const shuffled = [...q.options];
+      shuffleArray(shuffled);
+      shuffled.forEach(opt => {
+        const btn = document.createElement('button');
+        btn.textContent = opt;
+        btn.className = 'option-btn';
+        btn.onclick = () => selectAnswer(opt, q.answer, btn, true);
+        optionsDiv.appendChild(btn);
+      });
+      nextBtn.classList.add('hidden');
+      startTimer(() => selectAnswer(null, q.answer, null, false));
+    }
+
+    function selectAnswer(selected, correct, btn, manual=true) {
+      clearInterval(timerInterval);
+      const buttons = optionsDiv.querySelectorAll('button');
+      buttons.forEach(b => b.disabled = true);
+      if(selected === correct){
+        if(manual) score++;
+        feedbackEl.textContent = '✅ Correct!';
+        if(btn) btn.classList.add('correct');
+        correctSound.play();
+      } else {
+        feedbackEl.textContent = selected===null ? `⏰ Time's up! Correct: ${correct}` : `❌ Wrong! Correct: ${correct}`;
+        if(btn) btn.classList.add('wrong');
+        buttons.forEach(b => { if(b.textContent === correct) b.classList.add('correct'); });
+        wrongSound.play();
+      }
+      scoreDisplay.textContent = `Score: ${score} / ${questions.length}`;
+      nextBtn.classList.remove('hidden');
+    }
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex++;
+      if(currentIndex < questions.length) showQuestion();
+      else endQuiz();
+    });
+
+    function endQuiz() {
+      questionContainer.classList.add('hidden');
+      resultDiv.classList.remove('hidden');
+      finalScoreEl.textContent = `${score} / ${questions.length}`;
+      let name = sessionStorage.getItem('quizPlayerName');
+      if(!name){
+        name = prompt('Enter your name for the leaderboard:');
+        if(name) sessionStorage.setItem('quizPlayerName', name);
+      }
+      if(name) saveScore(name, score);
+      showLeaderboard();
+    }
+
+    showLeaderboard();
+  </script>
+</body>
+</html>
