--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@ body.dark-mode button { background: #555; color: #eee; }
   </div>
 </div>
 
-<!-- Sounds -->
 <audio id="correctSound" src="https://freesound.org/data/previews/320/320654_5260876-lq.mp3"></audio>
 <audio id="wrongSound" src="https://freesound.org/data/previews/320/320655_5260876-lq.mp3"></audio>
 <audio id="celebrationSound" src="https://freesound.org/data/previews/331/331912_3248244-lq.mp3"></audio>
 <canvas id="confettiCanvas" class="hidden"></canvas>
 
 <script>
-let questions=[], currentIndex=0, score=0, baseScore=0, streak=0, maxStreak=0, latestAttemptTimestamp=null, timerInterval=null;
+let questions=[], currentIndex=0, score=0, streak=0, maxStreak=0, timerInterval=null, latestAttemptTimestamp=null;
 const timePerQuestion=15;
 
 const addBtn=document.getElementById('addQuestion');
@@ -122,6 +121,7 @@ const correctSound=document.getElementById('correctSound');
 const wrongSound=document.getElementById('wrongSound');
 const celebrationSound=document.getElementById('celebrationSound');
 const confettiCanvas=document.getElementById('confettiCanvas');
+let confettiId=null;
 
 function shuffleArray(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
 
@@ -130,7 +130,7 @@ function saveScore(name, score, maxStreak){
   const leaderboard=JSON.parse(localStorage.getItem(leaderboardKey))||[];
   latestAttemptTimestamp=Date.now();
   leaderboard.push({name, score, maxStreak, total: questions.length, timestamp: latestAttemptTimestamp});
-  localStorage.setItem(leaderboardKey,JSON.stringify(leaderboard));
+  localStorage.setItem(leaderboardKey, JSON.stringify(leaderboard));
 }
 
 function showLeaderboard(){
@@ -146,6 +146,7 @@ function showLeaderboard(){
   });
 }
 
+// Load quiz from URL
 const urlParams=new URLSearchParams(window.location.search);
 if(urlParams.has('quiz')){
   const encoded=urlParams.get('quiz');
@@ -158,56 +159,34 @@ if(urlParams.has('quiz')){
   }catch(e){console.error('Invalid quiz data');}
 }
 
-addBtn.addEventListener('click',()=>{
+// Event listeners
+addBtn.addEventListener('click', ()=>{
   const question=questionText.value.trim();
   const options=Array.from(optionInputs).map(i=>i.value.trim());
   const answer=correctAnswerInput.value.trim();
-  if(!question||options.some(opt=>!opt)||!answer){alert('Fill all fields');return;}
+  if(!question || options.some(opt=>!opt) || !answer){alert('Fill all fields'); return;}
   questions.push({question, options, answer});
-  questionText.value='';optionInputs.forEach(i=>i.value='');correctAnswerInput.value='';
+  questionText.value=''; optionInputs.forEach(i=>i.value=''); correctAnswerInput.value='';
   alert('Question added! Total: '+questions.length);
 });
 
-generateLinkBtn.addEventListener('click',()=>{
-  if(questions.length===0){alert('Add questions first');return;}
+generateLinkBtn.addEventListener('click', ()=>{
+  if(questions.length===0){alert('Add questions first'); return;}
   const encoded=btoa(encodeURIComponent(JSON.stringify(questions)));
   const link=window.location.origin+window.location.pathname+'?quiz='+encoded;
-  shareLinkInput.value=link;shareLinkInput.select();document.execCommand('copy');alert('Link copied!');
+  shareLinkInput.value=link;
+  navigator.clipboard.writeText(link).then(()=>alert('Link copied!'));
 });
 
-startQuizBtn.addEventListener('click',()=>{
-  startQuizBtn.classList.add('hidden');
-  questionContainer.classList.remove('hidden');
-  startQuiz();
-});
-
-playAgainBtn.addEventListener('click',()=>{
-  resultDiv.classList.add('hidden');
-  questionContainer.classList.remove('hidden');
-  feedbackEl.textContent='';
-  startQuiz();
-});
-
-resetLeaderboardBtn.addEventListener('click',()=>{
-  if(confirm('Are you sure you want to reset the leaderboard?')){
-    localStorage.removeItem('quizLeaderboard');
-    showLeaderboard();
-    alert('Leaderboard has been reset.');
-  }
-});
-
-toggleDarkModeBtn.addEventListener('click',()=>{
-  document.body.classList.toggle('dark-mode');
-  localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
-});
-if(localStorage.getItem('darkMode')==='true'){
-  document.body.classList.add('dark-mode');
-}
+startQuizBtn.addEventListener('click', ()=>{startQuizBtn.classList.add('hidden'); questionContainer.classList.remove('hidden'); startQuiz();});
+playAgainBtn.addEventListener('click', ()=>{resultDiv.classList.add('hidden'); questionContainer.classList.remove('hidden'); feedbackEl.textContent=''; startQuiz();});
+resetLeaderboardBtn.addEventListener('click', ()=>{if(confirm('Are you sure?')){localStorage.removeItem('quizLeaderboard'); showLeaderboard(); alert('Leaderboard reset');}});
+toggleDarkModeBtn.addEventListener('click', ()=>{document.body.classList.toggle('dark-mode'); localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));});
+if(localStorage.getItem('darkMode')==='true') document.body.classList.add('dark-mode');
 
 function startQuiz(){
-  currentIndex=0;baseScore=0;score=0;streak=0;maxStreak=0;
-  updateScoreDisplay();feedbackEl.textContent='';
-  nextBtn.classList.add('hidden');
+  currentIndex=0; score=0; streak=0; maxStreak=0;
+  updateScoreDisplay(); feedbackEl.textContent=''; nextBtn.classList.add('hidden');
   showQuestion();
 }
 
@@ -215,150 +194,68 @@ function updateScoreDisplay(){scoreDisplay.textContent=`Score: ${score} / ${ques
 
 function startTimer(callback){
   let timeLeft=timePerQuestion;
-  timerBar.style.transition='none';
-  timerBar.style.width='100%';
-  setTimeout(()=>{
-    timerBar.style.transition=`width ${timePerQuestion}s linear`;
-    timerBar.style.width='0%';
-  },50);
-
+  timerBar.style.transition='none'; timerBar.style.width='100%';
+  setTimeout(()=>{timerBar.style.transition=`width ${timePerQuestion}s linear`; timerBar.style.width='0%';},50);
   clearInterval(timerInterval);
-  timerInterval=setInterval(()=>{
-    timeLeft--;
-    if(timeLeft<=0){clearInterval(timerInterval);callback();}
-  },1000);
+  timerInterval=setInterval(()=>{timeLeft--; if(timeLeft<=0){clearInterval(timerInterval); callback();}},1000);
 }
 
 function showQuestion(){
-  feedbackEl.textContent='';
-  progressEl.textContent=`Question ${currentIndex+1} of ${questions.length}`;
-  progressBar.style.width=`${((currentIndex+1)/questions.length)*100}%`;
-  updateScoreDisplay();
-  const q=questions[currentIndex];
-  questionEl.textContent=q.question;
-  optionsDiv.innerHTML='';
-  const shuffled=[...q.options];shuffleArray(shuffled);
+  feedbackEl.textContent=''; progressEl.textContent=`Question ${currentIndex+1} of ${questions.length}`;
+  progressBar.style.width=`${((currentIndex+1)/questions.length)*100}%`; updateScoreDisplay();
+  const q=questions[currentIndex]; questionEl.textContent=q.question; optionsDiv.innerHTML='';
+  const shuffled=[...q.options]; shuffleArray(shuffled);
   shuffled.forEach(opt=>{
     const btn=document.createElement('button');
-    btn.textContent=opt;
-    btn.className='option-btn';
+    btn.textContent=opt; btn.className='option-btn';
     btn.onclick=()=>selectAnswer(opt,q.answer,btn,true);
     optionsDiv.appendChild(btn);
   });
-  nextBtn.classList.add('hidden');
-  startTimer(()=>selectAnswer(null,q.answer,null,false));
+  nextBtn.classList.add('hidden'); startTimer(()=>selectAnswer(null,q.answer,null,false));
   updateStreakDisplay();
 }
 
-function updateStreakDisplay(){
-  streakDisplay.textContent='';
-  for(let i=0;i<streak;i++){
-    const flame=document.createElement('span');
-    flame.textContent='🔥';
-    flame.className='streak-flame';
-    streakDisplay.appendChild(flame);
-  }
-}
+function updateStreakDisplay(){streakDisplay.textContent=''; for(let i=0;i<streak;i++){const flame=document.createElement('span'); flame.textContent='🔥'; flame.className='streak-flame'; streakDisplay.appendChild(flame);}}
 
-function checkPersonalBest(){
-  const name=sessionStorage.getItem('quizPlayerName');
-  if(!name) return;
-  const leaderboard=JSON.parse(localStorage.getItem('quizLeaderboard'))||[];
-  const prev=leaderboard.filter(e=>e.name===name);
-  const personalBest=prev.length?Math.max(...prev.map(e=>e.maxStreak)):0;
-  if(streak>personalBest){
-    celebrationSound.play();
-    launchConfetti();
-  }
-}
+function checkPersonalBest(){const name=sessionStorage.getItem('quizPlayerName'); if(!name) return; const leaderboard=JSON.parse(localStorage.getItem('quizLeaderboard'))||[]; const prev=leaderboard.filter(e=>e.name===name); const personalBest=prev.length?Math.max(...prev.map(e=>e.maxStreak)):0; if(streak>personalBest){celebrationSound.play(); launchConfetti();}}
 
 function selectAnswer(selected,correct,btn,manual=true){
   clearInterval(timerInterval);
-  const buttons=optionsDiv.querySelectorAll('button');
-  buttons.forEach(b=>b.disabled=true);
+  const buttons=optionsDiv.querySelectorAll('button'); buttons.forEach(b=>b.disabled=true);
   if(selected===correct){
-    if(manual){
-      baseScore++;
-      streak++;
-      if(streak>maxStreak) maxStreak=streak;
-      score+=streak;
-    }
-    feedbackEl.textContent=`✅ Correct! Streak: ${streak} (+${streak} pts)`;
-    if(btn) btn.classList.add('correct');
-    correctSound.play();
-    checkPersonalBest();
+    if(manual){streak++; if(streak>maxStreak) maxStreak=streak; score+=streak;}
+    feedbackEl.textContent=`✅ Correct! Streak: ${streak} (+${streak} pts)`; if(btn) btn.classList.add('correct'); correctSound.play(); checkPersonalBest();
   }else{
     feedbackEl.textContent=selected===null?`⏰ Time's up! Correct: ${correct}`:`❌ Wrong! Correct: ${correct}`;
-    if(btn) btn.classList.add('wrong');
-    buttons.forEach(b=>{if(b.textContent===correct)b.classList.add('correct');});
-    streak=0;
-    wrongSound.play();
+    if(btn) btn.classList.add('wrong'); buttons.forEach(b=>{if(b.textContent===correct)b.classList.add('correct');}); streak=0; wrongSound.play();
   }
-  updateScoreDisplay();
-  updateStreakDisplay();
-  nextBtn.classList.remove('hidden');
+  updateScoreDisplay(); updateStreakDisplay(); nextBtn.classList.remove('hidden');
 }
 
-nextBtn.addEventListener('click',()=>{
-  currentIndex++;
-  if(currentIndex<questions.length) showQuestion();
-  else endQuiz();
-});
+nextBtn.addEventListener('click', ()=>{currentIndex++; if(currentIndex<questions.length) showQuestion(); else endQuiz();});
 
 function endQuiz(){
-  questionContainer.classList.add('hidden');
-  resultDiv.classList.remove('hidden');
-  finalScoreEl.textContent=`${score} / ${questions.length}`;
+  questionContainer.classList.add('hidden'); resultDiv.classList.remove('hidden'); finalScoreEl.textContent=`${score} / ${questions.length}`;
   let name=sessionStorage.getItem('quizPlayerName');
-  if(!name){
-    name=prompt('Enter your name for the leaderboard:');
-    if(name) sessionStorage.setItem('quizPlayerName',name);
-  }
-  if(name) saveScore(name,score,maxStreak);
-  showLeaderboard();
+  if(!name){name=prompt('Enter your name for the leaderboard:'); if(name) sessionStorage.setItem('quizPlayerName',name);}
+  if(name) saveScore(name,score,maxStreak); showLeaderboard();
 }
 
-// Fixed keyboard shortcuts: only when next is hidden
-document.addEventListener('keydown',e=>{
+// Keyboard shortcuts
+document.addEventListener('keydown', e=>{
   if(['1','2','3','4'].includes(e.key) && nextBtn.classList.contains('hidden')){
-    const btn=optionsDiv.querySelectorAll('button')[parseInt(e.key)-1];
-    if(btn) btn.click();
+    const btn=optionsDiv.querySelectorAll('button')[parseInt(e.key)-1]; if(btn) btn.click();
   }
 });
 
+// Confetti
 function launchConfetti(){
   confettiCanvas.classList.remove('hidden');
-  const ctx=confettiCanvas.getContext('2d');
-  const pieces=[];
-  const W=confettiCanvas.width=window.innerWidth;
-  const H=confettiCanvas.height=window.innerHeight;
-  for(let i=0;i<150;i++){
-    pieces.push({x:Math.random()*W,y:Math.random()*H,r:Math.random()*6+4,d:Math.random()*H,color:`hsl(${Math.random()*360},100%,50%)`,tilt:Math.random()*10-10});
-  }
+  const ctx=confettiCanvas.getContext('2d'); const pieces=[]; const W=confettiCanvas.width=window.innerWidth; const H=confettiCanvas.height=window.innerHeight;
+  for(let i=0;i<150;i++){pieces.push({x:Math.random()*W,y:Math.random()*H,r:Math.random()*6+4,d:Math.random()*H,color:`hsl(${Math.random()*360},100%,50%)`,tilt:Math.random()*10-10});}
   let angle=0;
-  let animationId;
-  function draw(){
-    ctx.clearRect(0,0,W,H);
-    pieces.forEach(p=>{
-      ctx.fillStyle=p.color;
-      ctx.beginPath();
-      ctx.moveTo(p.x+p.tilt,p.y);
-      ctx.lineTo(p.x+p.tilt+p.r/2,p.y+p.r);
-      ctx.lineTo(p.x+p.tilt-p.r/2,p.y+p.r);
-      ctx.closePath();
-      ctx.fill();
-      p.y+=2;
-      p.tilt+=Math.sin(angle)*0.5;
-      if(p.y>H)p.y=0;
-    });
-    angle+=0.1;
-    animationId=requestAnimationFrame(draw);
-  }
-  draw();
-  setTimeout(()=>{
-    cancelAnimationFrame(animationId);
-    confettiCanvas.classList.add('hidden');
-  },3000);
+  function draw(){ctx.clearRect(0,0,W,H); pieces.forEach(p=>{ctx.fillStyle=p.color; ctx.beginPath(); ctx.moveTo(p.x+p.tilt,p.y); ctx.lineTo(p.x+p.tilt+p.r/2,p.y+p.r); ctx.lineTo(p.x+p.tilt-p.r/2,p.y+p.r); ctx.closePath(); ctx.fill(); p.y+=2; p.tilt+=Math.sin(angle)*0.5; if(p.y>H)p.y=0;}); angle+=0.1; confettiId=requestAnimationFrame(draw);}
+  draw(); setTimeout(()=>{cancelAnimationFrame(confettiId); confettiCanvas.classList.add('hidden');},3000);
 }
 
 showLeaderboard();
